<resources>
    <string name="app_name">GTBank</string>
    <string name="company_logo">Company Logo</string>
    <string name="email_icon">Email Icon</string>
    <string name="flag">Flag</string>
    <string name="nigeria">Nigeria</string>
    <string name="mobile_banking">Mobile Banking</string>
    <string name="user_id_account_phone_no_email">User ID/ Account/ Phone No/ Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_user_id_password">Forgot User ID/Password</string>
    <string name="get_help">Get Help</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="vault">Vault</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="acc_1_of_1">Acc. 1 of 1</string>
    <string name="menu">menu</string>
    <string name="savings_account">Savings Account</string>
    <string name="xxxxxxxxxx">XXXXXXXXXX</string>
    <string name="account_balance">Account Balance</string>
    <string name="_20_000_97">$20,000.97</string>
    <string name="visa_logo">Visa_logo</string>
    <string name="book_balance_1000_97">Book Balance: $1000.97</string>
    <string name="damilola_shemfe">Damilola Shemfe</string>
    <string name="swipe"><![CDATA[<SWIPE>]]></string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="range">Range</string>
    <string name="e_channels">E- CHANNELS</string>
    <string name="money">money</string>
    <string name="mbanking_12449i23528347439340">MBANKING - 12449i23528347439340…</string>
    <string name="_2_000_00">-2,000.00</string>
    <string name="_21st_aug_2021">21ST AUG 2021</string>
    <string name="title_activity_home2">Home2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>