<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        tools:context=".SignIn">

        <!-- TOP BAR -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/email_icon"
                android:src="@drawable/ic_email" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/company_logo"
                android:src="@drawable/bank_logo" />

        </RelativeLayout>

        <!--CARD-->
        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <!--FLAG AND TEXT-->
                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/flag"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/flag"
                        android:src="@drawable/ic_flag" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="42dp"
                        android:fontFamily="@font/mpsrounded"
                        android:text="@string/nigeria"
                        android:textColor="@color/light_grey"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="83dp"
                        android:gravity="center_horizontal"
                        android:text="@string/mobile_banking"
                        android:textColor="@color/light_grey"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/mpsrounded"
                        android:textSize="18sp"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/email"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/et_custom"
                    android:fontFamily="@font/mpsroundedrr"
                    android:ems="10"
                    android:hint="@string/user_id_account_phone_no_email"
                    android:padding="15dp"
                    android:textColorHint="@color/darker_grey"
                    android:textSize="14sp"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableEnd="@drawable/ic_fingerprint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mpsroundedrr"
                    android:autofillHints=""
                    android:background="@drawable/et_custom"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:padding="15dp"
                    android:textColorHint="@color/darker_grey"
                    android:textSize="15sp"
                    android:inputType="textPassword" />
                
                <!-- BUTTON -->
                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_text"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:fontFamily="@font/mpsrounded"
                    android:textColor="@color/light_grey"/>
                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:id="@+id/sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textSize="14sp"
                        android:fontFamily="@font/mpsroundedrr"
                        android:textColor="@color/light_grey"/>

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_user_id_password"
                        android:textSize="14sp"
                        android:fontFamily="@font/mpsroundedrr"
                        android:textColor="@color/light_grey"
                        android:layout_centerInParent="true"/>

                    <TextView
                        android:id="@+id/get_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_help"
                        android:textSize="14sp"
                        android:fontFamily="@font/mpsroundedrr"
                        android:textColor="@color/light_grey"
                        android:layout_alignParentEnd="true"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
