<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        tools:context=".SignUp">

        <ImageView
            android:id="@+id/vault"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_vault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/vault" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/et_bg_custom"
            android:elevation="20dp"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up_caps"
                android:fontFamily="@font/mpsrounded"
                android:textColor="@color/darker_blue"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/first_name"
                android:drawableEnd="@drawable/ic_pen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/et_custom"
                android:ems="10"
                android:padding="15dp"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:hint="@string/first_name"
                android:textColorHint="@color/darker_grey"
                android:fontFamily="@font/mpsroundedrr"/>

            <EditText
                android:id="@+id/last_name"
                android:drawableEnd="@drawable/ic_pen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/et_custom"
                android:ems="10"
                android:padding="15dp"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:hint="@string/last_name"
                android:textColorHint="@color/darker_grey"
                android:fontFamily="@font/mpsroundedrr"/>

            <EditText
                android:id="@+id/email"
                android:drawableEnd="@drawable/ic_pen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/et_custom"
                android:ems="10"
                android:padding="15dp"
                android:layout_marginTop="15dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHint="@color/darker_grey"
                android:fontFamily="@font/mpsroundedrr"/>

            <EditText
                android:id="@+id/password"
                android:drawableEnd="@drawable/ic_pen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/et_custom"
                android:ems="10"
                android:padding="15dp"
                android:layout_marginTop="15dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/darker_grey"
                android:fontFamily="@font/mpsroundedrr"/>

            <!-- BUTTON -->
            <TextView
                android:id="@+id/sign_up"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/et_custom"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center"
                android:fontFamily="@font/mpsrounded"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/sign_up_caps"
                android:textColor="@color/back_orange"/>

            <!-- BASE -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mpsroundedrr"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mpsrounded"
                    android:text="@string/sign_in"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold"
                    android:textSize="16sp"/>



            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
